--- a/modules/styles/mediawiki.ui/modal.less
+++ b/modules/styles/mediawiki.ui/modal.less
@@ -55,7 +55,7 @@
 	padding: 0 .3em;
 	font-weight: bold;
 	color: @colorText;
-	line-height: 2.2em;
+	line-height: 2.2;
 	border-bottom: 1px solid @colorGrayLight;
 }
 
